--- a/index.html
+++ b/index.html
@@ -538,6 +538,119 @@
                             <p class="sprint-value story-points-sum"><span></span></p>
                         </div>
                     </div>
+                    <div class="sprint">
+                        <h2 class="sprint-title">Sprint 4</h2>
+                        <div class="sprint-pair">
+                            <p class="sprint-key"><i class="material-icons">date_range</i>Start date</p>
+                            <p class="sprint-value">2020-05-12</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key"><i class="material-icons">date_range</i>End date</p>
+                            <p class="sprint-value">2020-05-18</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key"><i class="material-icons">location_on</i>Sprint demo</p>
+                            <p class="sprint-value">In a <a target="_blank" href="https://zoom.us/">Zoom</a> meeting at
+                                08:30 AM</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Daily scrum</p>
+                            <p class="sprint-value">Everyday at 10:00 AM</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key"><i class="material-icons">star</i>Sprint goal</p>
+                            <p class="sprint-value">Package and release an alpha version of Lumi.</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key"><i class="material-icons">format_list_bulleted</i>Sprint backlog</p>
+                            <table class="sprint-backlog">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Story</th>
+                                    <th>Story points</th>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-130</span></td>
+                                    <td>Create folder component.</td>
+                                    <td class="story-point"><span>8</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-177</span></td>
+                                    <td>Fix currently know client bugs.</td>
+                                    <td class="story-point"><span>20</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-173</span></td>
+                                    <td>Connect settings page to top-bar.</td>
+                                    <td class="story-point"><span>3</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-174</span></td>
+                                    <td>Connect user overview to room page.</td>
+                                    <td class="story-point"><span>8</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-184</span></td>
+                                    <td>Message user on front-end that the patch was rejected.</td>
+                                    <td class="story-point"><span>5</span></td>
+                                </tr>
+                                 <tr>
+                                    <td class="story-id"><span>IP-172</span></td>
+                                    <td>Connect loading screen.</td>
+                                    <td class="story-point"><span>4</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-185</span></td>
+                                    <td>Refine loading screen.</td>
+                                    <td class="story-point"><span>4</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-178</span></td>
+                                    <td>User update in room component.</td>
+                                    <td class="story-point"><span>11</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-171</span></td>
+                                    <td>Complete the settings page, connect to back-end.</td>
+                                    <td class="story-point"><span>15</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-170</span></td>
+                                    <td>Create executable for all plattforms.</td>
+                                    <td class="story-point"><span>20</span></td>
+                                </tr>
+                                 <tr>
+                                    <td class="story-id"><span>IP-145</span></td>
+                                    <td>Leave room React.</td>
+                                    <td class="story-point"><span>2</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-142</span></td>
+                                    <td>Client shall be able to handle admin.</td>
+                                    <td class="story-point"><span>8</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-146</span></td>
+                                    <td>Refine user overview component.</td>
+                                    <td class="story-point"><span>8</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-179</span></td>
+                                    <td>Display correct room logs.</td>
+                                    <td class="story-point"><span>10</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="story-id"><span>IP-175</span></td>
+                                    <td>Record user tutorial.</td>
+                                    <td class="story-point"><span>2</span></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Story points sum</p>
+                            <p class="sprint-value story-points-sum"><span></span></p>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section class="section">
