added tutorial description

--- a/expo.html
+++ b/expo.html
@@ -110,11 +110,12 @@
         </p>
       </div>
       <div class="tutorial-container">
-        <h2 class="tutorial-title">Follow this step-by-step tutorial to install Lumi and use it.</h2>
+        <h2 class="tutorial-title">Follow this step-by-step tutorial to install Lumi and use it</h2>
         <ul class="tutorial-list">
           <li class="tutorial-list-item">
             <span class="tutorial-list-item-index">1</span>
             <h3>Install the command line interface</h3>
+            <p class="tutorial-list-item-description">Before you can install <a href="https://www.npmjs.com/package/lumi-cli">lumi-cli</a> make sure you have <a href="https://www.npmjs.com/get-npm">npm</a> installed and if you are on Windows you kan skip the <code>sudo</code> part.</p>
             <asciinema-player
               class="shell-player"
               autoplay
@@ -127,6 +128,7 @@
           <li class="tutorial-list-item">
             <span class="tutorial-list-item-index">2</span>
             <h3>List all rooms</h3>
+            <p class="tutorial-list-item-description">To see all rooms available on the server we can use the <code>lumi rooms</code> command. For each room you can then see its unique ID and the number of connected clients.</p>
             <asciinema-player
               class="shell-player"
               autoplay
@@ -139,6 +141,7 @@
           <li class="tutorial-list-item">
             <span class="tutorial-list-item-index">3</span>
             <h3>Create a new room</h3>
+            <p class="tutorial-list-item-description">To create a new room, we can use the <code>lumi create</code> command. It is possible to enter a password for the room but it is not mandatory.</p>
             <asciinema-player
               class="shell-player"
               autoplay
@@ -151,6 +154,7 @@
           <li class="tutorial-list-item">
             <span class="tutorial-list-item-index">4</span>
             <h3>Join a room</h3>
+            <p class="tutorial-list-item-description">To connect to a room, we use the lumi <code>join command</code> followed by the ID of the room you want to connect to. Lumi will start listening to file changes in your current working directory, so make sure your path is correct.</p>
             <asciinema-player
               class="shell-player"
               autoplay
