--- a/expo.html
+++ b/expo.html
@@ -154,7 +154,7 @@
           <li class="tutorial-list-item">
             <span class="tutorial-list-item-index">4</span>
             <h3>Join a room</h3>
-            <p class="tutorial-list-item-description">To connect to a room, we use the lumi <code>join command</code> followed by the ID of the room you want to connect to. Lumi will start listening to file changes in your current working directory, so make sure your path is correct.</p>
+            <p class="tutorial-list-item-description">To connect to a room, we use the <code>lumi join</code> command followed by the ID of the room you want to connect to. Lumi will start listening to file changes in your current working directory, so make sure your path is correct.</p>
             <asciinema-player
               class="shell-player"
               autoplay
