--- a/expo.html
+++ b/expo.html
@@ -106,8 +106,7 @@
               </defs>
           </svg>
             <p class="hero-description">
-              Our product Lumi enables real-time inspection of file changes made
-              by all team members.
+              Helping programmers achieve a new level of productivity
             </p>
           </div>
         </div>
@@ -119,10 +118,13 @@
       <div class="executive-summary-container">
         <h2 class="executive-summary-title">Executive summary<h2>
         <p class="executive-summary-paragraph" style="margin-bottom: 16px;">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et finibus lorem. Praesent volutpat, quam id tristique aliquet, lacus dui pellentesque justo, quis tristique est orci vel nunc. Fusce ac ornare leo, a efficitur velit. Duis consequat, eros nec consequat faucibus, sapien nisl pellentesque tellus, at tempus justo lorem eu urna. Quisque at sem vel ipsum elementum porttitor. Maecenas sit amet ornare quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+          Lumi is an amazing tool to help programmers working in teams, large or small. It grants teams the opportunity to have an overview of what is being done live and is a great complement to Git and Github. By creating and joining so called rooms, you and your team will get live updates whenever our server registers a file change. If you are worried about your files being overwritten, do not worry. Everything sent to you is stored in a shadow folder where you yourself get to choose whether you want the updated version or the version you are currently working on or with. Lumi will work on multiple platforms such as Linux, Mac and Windows and we are looking into smartphone compatibility.
+        </p>
+        <p class="executive-summary-paragraph" style="margin-bottom: 16px;">
+          Currently there are two ways to access lumi. The first way is through Node Package Manager, or NPM in short, where you can download our Command Line Interface and access all of our commands through your terminal. The second way is to download our Graphical User Interface where everything is displayed and accessed through an easy-to- use menu. We have tutorials for both workflows on this page, where we show you all steps from installing to creating and joining rooms.
         </p>
         <p class="executive-summary-paragraph">
-          Nunc a enim tempus, pharetra sapien ac, vehicula purus. Duis ex nunc, fermentum at tincidunt at, suscipit mattis eros. Sed rhoncus, leo at euismod tristique, dolor velit pellentesque enim, eu sagittis eros sapien ut diam. Aenean blandit ipsum diam, eget dictum sapien lacinia quis. Fusce pellentesque pretium lorem, ac porta dui imperdiet in. Mauris tempus mauris consequat lacus porta, porttitor fringilla dolor semper.
+          With the help of Lumi you and your team will be able to reach a new level of efficiency and at all times you will have the possibility to test the current state of your project.
         </p>
       </div>
       <div class="tutorial-container">
