added smooth scroll

--- a/expo.html
+++ b/expo.html
@@ -43,7 +43,7 @@
         <div class="hero-shadow">
           <a class="link-back" href="index.html">Main page</a>
           <div class="hero-text">
-            <svg class="hero-logo" width="200px" viewBox="0 0 2314 976" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:square;stroke-miterlimit:1.7;">
+            <svg class="hero-logo" height="84px" viewBox="0 0 2314 976" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:square;stroke-miterlimit:1.7;">
               <g id="Artboard1" transform="matrix(0.797931,0,0,0.617722,2399.38,281.063)">
                   <rect x="-3007" y="-455" width="2900" height="1580" style="fill:none;"/>
                   <g id="Lumi" transform="matrix(5.22689,0,0,6.75174,-3471.14,-3325.56)">
