--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <header class="header">
           <svg
             class="hero-logo"
-            width="200px"
+            height="84px"
             viewBox="0 0 2314 976"
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
