--- a/expo.html
+++ b/expo.html
@@ -116,7 +116,7 @@
         <iframe width="100%" height="400px" src="https://www.youtube.com/embed/a8KKryZdheY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="executive-summary-container">
-        <h2 class="executive-summary-title">Executive summary<h2>
+        <h2 class="executive-summary-title">Executive summary</h2>
         <p class="executive-summary-paragraph" style="margin-bottom: 16px;">
           Lumi is an amazing tool to help programmers working in teams, large or small. It grants teams the opportunity to have an overview of what is being done live and is a great complement to Git and Github. By creating and joining so called rooms, you and your team will get live updates whenever our server registers a file change. If you are worried about your files being overwritten, do not worry. Everything sent to you is stored in a shadow folder where you yourself get to choose whether you want the updated version or the version you are currently working on or with. Lumi will work on multiple platforms such as Linux, Mac and Windows and we are looking into smartphone compatibility.
         </p>
