--- a/expo.html
+++ b/expo.html
@@ -113,7 +113,7 @@
       </div>
       <div class="video-container">
         <h2 class="video-title">What is Lumi?</h2>
-        <iframe width="100%" height="400px" src="https://www.youtube.com/embed/a8KKryZdheY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="400px" src="https://www.youtube.com/embed/ZCSOiUHisqA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="executive-summary-container">
         <h2 class="executive-summary-title">Executive summary</h2>
