added linkedin for more profiles

--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,11 @@
                   <a target="_blank" href="https://github.com/erikschmutz"
                     ><img src="graphics/github.png" alt="Github logo"
                   /></a>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/erik-rehn-b12556194/"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -1056,7 +1061,7 @@
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/in/jesse-feng-2895b013a/"
-                    ><img src="graphics/linkedin.png" alt="Github logo"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
                   /></a>
                 </div>
               </div>
@@ -1081,11 +1086,10 @@
                   <a target="_blank" href="https://github.com/Christopher96"
                     ><img src="graphics/github.png" alt="Github logo"
                   /></a>
-
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/in/christopher-gauffin-745731b6/"
-                    ><img src="graphics/linkedin.png" alt="Github logo"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
                   /></a>
                 </div>
               </div>
@@ -1128,6 +1132,11 @@
                   <a target="_blank" href="https://github.com/jtornert"
                     ><img src="graphics/github.png" alt="Github logo"
                   /></a>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/joakim-tornert-191ab8139/"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -1150,6 +1159,11 @@
                   <a target="_blank" href="https://github.com/Taumich"
                     ><img src="graphics/github.png" alt="Github logo"
                   /></a>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/michaelarenander/"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -1170,6 +1184,11 @@
                     target="_blank"
                     href="https://github.com/octosquidinteractive"
                     ><img src="graphics/github.png" alt="Github logo"
+                  /></a>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/octosquid-oscar/"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
                   /></a>
                 </div>
               </div>
@@ -1194,7 +1213,7 @@
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/in/marcus-a-230389136/"
-                    ><img src="graphics/linkedin.png" alt="Github logo"
+                    ><img src="graphics/linkedin.png" alt="Linkedin logo"
                   /></a>
                 </div>
               </div>
