--- a/expo.html
+++ b/expo.html
@@ -127,8 +127,38 @@
           With the help of Lumi you and your team will be able to reach a new level of efficiency and at all times you will have the possibility to test the current state of your project.
         </p>
       </div>
+      <div class="download-container">
+        <h2 class="download-title">Download Lumi GUI</h2>
+            <p class="download-paragraph" style="margin-bottom: 16px;">Select the correct link based upon your operating system. When you click on one of these links, the Lumi GUI (Graphical User Interface) will be downloaded.</p>
+            <table class="download-table">
+              <tr>
+                <th>OS</th>
+                <th>Link</th>
+                <th>Version</th>
+                <th>Last edited</th>
+              </tr>
+              <tr>
+                <td>Windows</td>
+                <td><a href="#" download>lumi-windows-1.0.0.exe</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+              <tr>
+                <td>Linux</td>
+                <td><a href="#" download>lumi-linux-1.0.0.exe</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+              <tr>
+                <td>Mac OS X</td>
+                <td><a href="#" download>lumi-mac-1.0.0.exe</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+            </table>
+      </div>
       <div class="tutorial-container">
-        <h2 class="tutorial-title">Follow this step-by-step tutorial to install Lumi and use it</h2>
+        <h2 class="tutorial-title">Follow this step-by-step tutorial to install Lumi CLI and use it</h2>
         <ul class="tutorial-list">
           <li class="tutorial-list-item">
             <span class="tutorial-list-item-index">1</span>
