--- a/index.html
+++ b/index.html
@@ -244,6 +244,11 @@
             </li>
             <li class="nav-list-item">
               <a class="nav-link" href="#"
+                ><i class="material-icons">cloud_download</i>Download</a
+              >
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link" href="#"
                 ><i class="material-icons">directions_run</i>Sprints</a
               >
             </li>
@@ -407,6 +412,43 @@
             <p>
               This list will be extended over time as we add more functionality.
             </p>
+          </article>
+        </section>
+        <section class="section">
+          <div class="section-title">
+            <h1 class="section-title-h1">
+              <i class="material-icons">link</i><span>Download</span>
+            </h1>
+          </div>
+          <article class="section-article">
+            <h2>Select your operating system</h2>
+            <p>Select the correct link based upon your operating system. When you click on one of these links, the Lumi GUI (Graphical User Interface) will be downloaded.</p>
+            <table class="download-table">
+              <tr>
+                <th>OS</th>
+                <th>Link</th>
+                <th>Version</th>
+                <th>Last edited</th>
+              </tr>
+              <tr>
+                <td>Windows</td>
+                <td><a href="#" download>lumi-windows-1.0.0.exe</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+              <tr>
+                <td>Linux</td>
+                <td><a href="#" download>lumi-linux-1.0.0.exe</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+              <tr>
+                <td>Mac OS X</td>
+                <td><a href="#" download>lumi-mac-1.0.0.exe</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+            </table>
           </article>
         </section>
         <section class="section">
