--- a/expo.html
+++ b/expo.html
@@ -129,7 +129,8 @@
       </div>
       <div class="download-container">
         <h2 class="download-title">Download Lumi GUI</h2>
-            <p class="download-paragraph" style="margin-bottom: 16px;">Select the correct link based upon your operating system. When you click on one of these links, the Lumi GUI (Graphical User Interface) will be downloaded.</p>
+            <p class="download-paragraph" style="margin-bottom: 16px;">
+              Choose the right link depending on your operating system. After clicking on a link, the Lumi GUI (Graphical User Interface) will be downloaded.</p>
             <table class="download-table">
               <tr>
                 <th>OS</th>
