--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           </div>
           <article class="section-article">
             <h2>Select your operating system</h2>
-            <p>Select the correct link based upon your operating system. When you click on one of these links, the Lumi GUI (Graphical User Interface) will be downloaded.</p>
+            <p>Choose the right link depending on your operating system. After clicking on a link, the Lumi GUI (Graphical User Interface) will be downloaded.</p>
             <table class="download-table">
               <tr>
                 <th>OS</th>
