--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
               </tr>
               <tr>
                 <td>Windows</td>
-                <td><a href="#" download>lumi-windows-1.0.0.exe</a></td>
+                <td><a href="files/lumi-windows-1.0.0.exe" download>lumi-windows-1.0.0.exe</a></td>
                 <td>1.0.0</td>
                 <td>2020-05-18</td>
               </tr>
