added download links

--- a/index.html
+++ b/index.html
@@ -432,19 +432,25 @@
               </tr>
               <tr>
                 <td>Windows</td>
-                <td><a href="files/lumi-windows-1.0.0.exe" download>lumi-windows-1.0.0.exe</a></td>
-                <td>1.0.0</td>
-                <td>2020-05-18</td>
-              </tr>
-              <tr>
-                <td>Linux</td>
-                <td><a href="#" download>lumi-linux-1.0.0.exe</a></td>
+                <td><a href="https://lumi-kth.s3-eu-west-1.amazonaws.com/lumi-windows-1.0.0.exe" download>lumi-windows-1.0.0.exe</a></td>
                 <td>1.0.0</td>
                 <td>2020-05-18</td>
               </tr>
               <tr>
                 <td>Mac OS X</td>
-                <td><a href="#" download>lumi-mac-1.0.0.exe</a></td>
+                <td><a href="https://lumi-kth.s3-eu-west-1.amazonaws.com/lumi-1.0.0.dmg" download>lumi-1.0.0.dmg</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+              <tr>
+                <td>Debian</td>
+                <td><a href="https://lumi-kth.s3-eu-west-1.amazonaws.com/lumi_1.0.0_amd64.deb" download>lumi_1.0.0_amd64.deb</a></td>
+                <td>1.0.0</td>
+                <td>2020-05-18</td>
+              </tr>
+              <tr>
+                <td>AppImage</td>
+                <td><a href="https://lumi-kth.s3-eu-west-1.amazonaws.com/lumi-1.0.0.AppImage" download>lumi-1.0.0.AppImage</a></td>
                 <td>1.0.0</td>
                 <td>2020-05-18</td>
               </tr>
